--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./style/style.css">
     <link rel="shortcut icon" href="./Assets/book-solid.svg" type="image/x-icon">
     <title>Book-Store</title>
@@ -12,34 +15,96 @@
 
 <body>
     <!-- Header -->
-    <header>
-        <nav class="navbar">
+    <header class="header">
+        <nav class="header-1 navbar">
             <div class="logo">
-            <a href="#" class="navlogo"><i class="fa fa-book"> Book Store</i></a>
+                <a href="#" class="navlogo"><i class="fa fa-book"></i> Book Store</a>
+
             </div>
             <form action="search" class="search-form">
                 <input type="search" name="" placeholder="Search Book Here" id="box-search">
-                 <label for="box-search" class="fas fa-search"></label>
+                <label for="box-search" class="fas fa-search"></label>
             </form>
             <div class="navicon">
-                    <a href="#" class="fas fa-search"></a>
-                    <a href="#"  class="fas fa-heart"></a>                
-                    <a href="#" class="fas fa-shopping-cart"></a>   
-                </div>  
-            <div class="login">
-                <i class="fa-solid fa-user" style="color: #B197FC;"></i>
+                <div id="search-btn" class="fas fa-search"></div>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <div class="fa-solid fa-user login"></div>
             </div>
         </nav>
 
+        <div class="header-2">
+            <nav class="nav-2">
+                <a href="#home">Home</a>
+                <a href="#eacture">Feacture</a>
+                <a href="#arrivals">Arrivals</a>
+                <a href="#reviews">Reviews</a>
+                <a href="#blogs">Blogs</a>
+            </nav>
+        </div>
     </header>
+    <!-- Bottom NavBar -->
+
+    <nav class="button-nav">
+        <a href="#home" class="fas fa-home"></a>
+        <a href="#eacture" class="fas fa-list"></a>
+        <a href="#arrivals" class="fas fa-tags"></a>
+        <a href="#reviews" class="fas fa-comments"></a>
+        <a href="#blogs" class="fas fa-blog"></a>
+    </nav>
+    <!-- Login Form -->
+    <div class="login-form-container">
+        <div id="close-login" class="fas fa-times"></div>
+        <form action="">
+            <h3>Sing In</h3>
+            <span>username</span>
+            <input type="email" class="box" name="username" id="user" placeholder="Enter your email">
+            <span>password</span>
+            <input type="password" class="box" name="password" id="password" placeholder="Enter your password">
+            <div class="checkbox">
+                <input type="checkbox" name="sbox" id="remember-me">
+                <label for="remember-me">remember session</label>
+            </div>
+            <input type="submit" value="sing in" class="btn">
+            <p>forget password ? <a href="#">click here</a></p>
+            <p>don't have a account ? <a href="#">create one</a></p>
+        </form>
+    </div>
     <!-- Main -->
     <main>
+        <section id="home" class="home">
+            <div class="row">
+                <div class="content">
+                    <h3>up to <span>75% off</span></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Adipisci, maiores veniam? Quibusdam assumenda nemo suscipit,
+                        sed voluptatum neque, minima consequatur autem,
+                        debitis ipsum unde deleniti ipsa quod eligendi eius dolor.</p>
+                    <a href="#" class="btn"> shop now</a>
+                </div>
+                <div class="swiper bookSlide">
+                    <div class="swiper-wrapper">
+                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv1.jpg" alt="booksS" class="img"></a>
+                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv2.jpg" alt="booksS" class="img"></a>
+                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv4.jpg" alt="booksS" class="img"></a>
+                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv5.jpg" alt="booksS" class="img"></a>
+                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv7.jpg" alt="booksS" class="img"></a>
+                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv8.jpg" alt="booksS" class="img"></a>
+                    </div>
 
+                </div>
+
+            </div>
+        </section>
     </main>
     <!-- Footer -->
     <footer>
 
     </footer>
-</body>
 
+
+</body>
+<script src="./script/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="./script/home.js"></script>
 </html>
