icons maquetado, styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./style/style.css">
     <link rel="shortcut icon" href="./Assets/book-solid.svg" type="image/x-icon">
     <title>Book-Store</title>
@@ -84,17 +84,62 @@
                 </div>
                 <div class="swiper bookSlide">
                     <div class="swiper-wrapper">
-                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv1.jpg" alt="booksS" class="img"></a>
-                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv2.jpg" alt="booksS" class="img"></a>
-                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv4.jpg" alt="booksS" class="img"></a>
-                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv5.jpg" alt="booksS" class="img"></a>
-                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv7.jpg" alt="booksS" class="img"></a>
-                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv8.jpg" alt="booksS" class="img"></a>
+                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv3.jpg" alt="booksS"
+                                class="img"></a>
+                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv2.jpg" alt="booksS"
+                                class="img"></a>
+                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv4.jpg" alt="booksS"
+                                class="img"></a>
+                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv5.jpg" alt="booksS"
+                                class="img"></a>
+                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv7.jpg" alt="booksS"
+                                class="img"></a>
+                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv1.jpg" alt="booksS"
+                                class="img"></a>
                     </div>
 
                 </div>
 
             </div>
+        </section>
+
+        <!-- Icons -->
+        <section class="icons-container">
+            <div class="icons">
+                <i class="fas fa-plane"></i>
+                <div class="content">
+                    <h3>free shipping</h3>
+                    <p>order over $100</p>
+                </div>
+
+            </div>
+            <div class="icons">
+                <i class="fas fa-lock"></i>
+                <div class="content">
+                    <h3>secure payment</h3>
+                    <p>100 secure payment</p>
+                </div>
+
+            </div>
+            <div class="icons">
+                <i class="fas fa-redo-alt"></i>
+                <div class="content">
+                    <h3>easy return</h3>
+                    <p>10 days returns</p>
+                </div>
+            </div>
+            <div class="icons">
+                <i class="fas fa-headset"></i>
+                <div class="content">
+                    <h3>24/7 support </h3>
+                    <p>call us anytime</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Feactured section -->
+        <section class="feactured" id="feactured">
+            
         </section>
     </main>
     <!-- Footer -->
@@ -107,4 +152,5 @@
 <script src="./script/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="./script/home.js"></script>
+
 </html>
