--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <form action="">
             <h3>Sing In</h3>
             <span>username</span>
-            <input type="email" class="" name="username" id="user" placeholder="Enter your email">
+            <input type="email" class="box" name="username" id="user" placeholder="Enter your email">
             <span>password</span>
-            <input type="password" class="" name="password" id="password"
+            <input type="password" class="box" name="password" id="password"
                 placeholder="Enter your password">
             <div class="checkbox">
                 <input type="checkbox" name="box" id="remember-me">
@@ -77,15 +77,15 @@
     <div class="reg-form-container">
         <div id="close-reg" class="fas fa-times"></div>
         <form action="">
-            <h3>Sing In</h3>
+            <h3>Sing Up</h3>
             <span>email</span>
-            <input type="email" class="swiper-slide box" name="username" id="user" placeholder="Enter your email">
+            <input type="email" class=" box" name="username" id="user" placeholder="Enter your email">
             <span>name</span>
-            <input type="name" class="swiper-slide box" name="name" id="name" placeholder="Enter your first name">
+            <input type="name" class=" box" name="name" id="name" placeholder="Enter your first name">
             <span>last name</span>
-            <input type="text" class="swiper-slide box" name="last-name" id="last" placeholder="Enter your last name">
+            <input type="text" class=" box" name="last-name" id="last" placeholder="Enter your last name">
             <span>country</span>
-            <select name="country" id="country">
+            <select name="country" id="country" class="box">
                 <option value="country-1"> name country</option>
                 <option value="country-1"> name country</option>
                 <option value="country-1"> name country</option>
@@ -95,74 +95,29 @@
             <span>password</span>
             <input type="password" class="swiper-slide box" name="password" id="password"
                 placeholder="Enter your password">
-            <div class="checkswiper-slide box">
-                <input type="checkswiper-slide box" name="sswiper-slide box" id="remember-me">
-                <label for="remember-me">remember session</label>
-            </div>
             <input type="submit" value="sing up" class="btn">
 
         </form>
     </div>
-
-        <!-- forgot Form
-    <div class="login-form-container">
-        <div id="close-login" class="fas fa-times"></div>
-        <form action="">
-            <h3>Sing In</h3>
-            <span>username</span>
-            <input type="email" class="swiper-slide box" name="username" id="user" placeholder="Enter your email">
-            <span>password</span>
-            <input type="password" class="swiper-slide box" name="password" id="password"
-                placeholder="Enter your password">
-            <div class="checkswiper-slide box">
-                <input type="checkswiper-slide box" name="sswiper-slide box" id="remember-me">
-                <label for="remember-me">remember session</label>
+        <!-- Detail -->
+    <div class="det-form-container">
+        <div id="close-det" class="fas fa-times"></div>
+        <div class="box">
+            <div class="images">
+                <img src="./Assets/books/Adv1.jpg" alt="books-f" class="imgf">
             </div>
-            <input type="submit" value="sing in" class="btn">
-            <p>forget password ? <a href="#">click here</a></p>
-            <p>don't have a account ? <a href="#">create one</a></p>
-        </form>
-    </div> -->
-
-    <!-- Cart
-    <div class="login-form-container">
-        <div id="close-login" class="fas fa-times"></div>
-        <form action="">
-            <h3>Sing In</h3>
-            <span>username</span>
-            <input type="email" class="swiper-slide box" name="username" id="user" placeholder="Enter your email">
-            <span>password</span>
-            <input type="password" class="swiper-slide box" name="password" id="password"
-                placeholder="Enter your password">
-            <div class="checkswiper-slide box">
-                <input type="checkswiper-slide box" name="sswiper-slide box" id="remember-me">
-                <label for="remember-me">remember session</label>
+            <div class="content">
+                <h3>detail book</h3>
+                <p>author: <samp>name autor</samp></p>
+                <p>year: <samp>year edition</samp></p>
+                <h3>preface</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Laudantium modi nesciunt culpa illum perspiciatis, ex ad sequi ratione totam itaque.</p>
+                <div class="price">$15.99 <span>$20.99</span></div>
+                <a href="#" class="btn"> add to cart</a>
             </div>
-            <input type="submit" value="sing in" class="btn">
-            <p>forget password ? <a href="#">click here</a></p>
-            <p>don't have a account ? <a href="#">create one</a></p>
-        </form>
-    </div> -->
-
-        <!-- Detail
-    <div class="login-form-container">
-        <div id="close-login" class="fas fa-times"></div>
-        <form action="">
-            <h3>Sing In</h3>
-            <span>username</span>
-            <input type="email" class="swiper-slide box" name="username" id="user" placeholder="Enter your email">
-            <span>password</span>
-            <input type="password" class="swiper-slide box" name="password" id="password"
-                placeholder="Enter your password">
-            <div class="checkswiper-slide box">
-                <input type="checkswiper-slide box" name="sswiper-slide box" id="remember-me">
-                <label for="remember-me">remember session</label>
-            </div>
-            <input type="submit" value="sing in" class="btn">
-            <p>forget password ? <a href="#">click here</a></p>
-            <p>don't have a account ? <a href="#">create one</a></p>
-        </form>
-    </div> -->
+        </div>
+    </div>
 
     <!-- Main -->
     <main>
@@ -179,17 +134,17 @@
                 <div class="swiper bookSlide">
                     <div class="swiper-wrapper">
                         <a href="#" class="swiper-slide"><img src="./Assets/books/Adv3.jpg" alt="booksS"
-                                class="img"></a>
+                                class="img det"></a>
                         <a href="#" class="swiper-slide"><img src="./Assets/books/Adv2.jpg" alt="booksS"
-                                class="img"></a>
+                                class="img det"></a>
                         <a href="#" class="swiper-slide"><img src="./Assets/books/Adv4.jpg" alt="booksS"
-                                class="img"></a>
+                                class="img det"></a>
                         <a href="#" class="swiper-slide"><img src="./Assets/books/Adv5.jpg" alt="booksS"
-                                class="img"></a>
+                                class="img det"></a>
                         <a href="#" class="swiper-slide"><img src="./Assets/books/Adv7.jpg" alt="booksS"
-                                class="img"></a>
+                                class="img det"></a>
                         <a href="#" class="swiper-slide"><img src="./Assets/books/Adv1.jpg" alt="booksS"
-                                class="img"></a>
+                                class="img det"></a>
                     </div>
 
                 </div>
@@ -239,7 +194,7 @@
 
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search"></a>
+                            <a href="#" class="fas fa-search det"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -250,12 +205,12 @@
                         <div class="content">
                             <h3>featured books</h3>
                             <div class="price">$15.99 <span>$20.99</span></div>
-                            <a href="#" class="btn"> add to cart</a>
+                            <a href="#" class="btn cart"> add to cart</a>
                         </div>
                     </div>
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search"></a>
+                            <a href="#" class="fas fa-search det"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -266,12 +221,12 @@
                         <div class="content">
                             <h3>featured books</h3>
                             <div class="price">$15.99 <span>$20.99</span></div>
-                            <a href="#" class="btn"> add to cart</a>
+                            <a href="#" class="btn cart"> add to cart</a>
                         </div>
                     </div>
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search"></a>
+                            <a href="#" class="fas fa-search det"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -282,12 +237,12 @@
                         <div class="content">
                             <h3>featured books</h3>
                             <div class="price">$15.99 <span>$20.99</span></div>
-                            <a href="#" class="btn"> add to cart</a>
+                            <a href="#" class="btn cart"> add to cart</a>
                         </div>
                     </div>
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search"></a>
+                            <a href="#" class="fas fa-search det"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -298,12 +253,12 @@
                         <div class="content">
                             <h3>featured books</h3>
                             <div class="price">$15.99 <span>$20.99</span></div>
-                            <a href="#" class="btn"> add to cart</a>
+                            <a href="#" class="btn cart"> add to cart</a>
                         </div>
                     </div>
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search"></a>
+                            <a href="#" class="fas fa-search det"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -314,13 +269,13 @@
                         <div class="content">
                             <h3>featured books</h3>
                             <div class="price">$15.99 <span>$20.99</span></div>
-                            <a href="#" class="btn"> add to cart</a>
+                            <a href="#" class="btn cart"> add to cart</a>
                         </div>
                     </div>
 
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search"></a>
+                            <a href="#" class="fas fa-search det"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -331,12 +286,12 @@
                         <div class="content">
                             <h3>featured books</h3>
                             <div class="price">$15.99 <span>$20.99</span></div>
-                            <a href="#" class="btn"> add to cart</a>
+                            <a href="#" class="btn cart"> add to cart</a>
                         </div>
                     </div>
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search"></a>
+                            <a href="#" class="fas fa-search det"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -347,12 +302,12 @@
                         <div class="content">
                             <h3>featured books</h3>
                             <div class="price">$15.99 <span>$20.99</span></div>
-                            <a href="#" class="btn"> add to cart</a>
+                            <a href="#" class="btn cart"> add to cart</a>
                         </div>
                     </div>
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search"></a>
+                            <a href="#" class="fas fa-search det"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -363,7 +318,7 @@
                         <div class="content">
                             <h3>featured books</h3>
                             <div class="price">$15.99 <span>$20.99</span></div>
-                            <a href="#" class="btn"> add to cart</a>
+                            <a href="#" class="btn cart"> add to cart</a>
                         </div>
                     </div>
                     <div class="swiper-slide box">
@@ -406,7 +361,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images">
-                            <img src="./Assets/books/book1-p.jpg" alt="books-f" class="imgf">
+                            <img src="./Assets/books/book1-p.jpg" alt="books-f" class="imgf ">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -424,7 +379,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images">
-                            <img src="./Assets/books/c1.jpg" alt="books-f" class="imgf">
+                            <img src="./Assets/books/c1.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -442,7 +397,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images">
-                            <img src="./Assets/books/book3-p.jpg" alt="books-f" class="imgf">
+                            <img src="./Assets/books/book3-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -460,7 +415,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images">
-                            <img src="./Assets/books/book4-p.jpg" alt="books-f" class="imgf">
+                            <img src="./Assets/books/book4-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -478,7 +433,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images">
-                            <img src="./Assets/books/book5-p.jpg" alt="books-f" class="imgf">
+                            <img src="./Assets/books/book5-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -501,7 +456,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images">
-                            <img src="./Assets/books/book6-p.jpg" alt="books-f" class="imgf">
+                            <img src="./Assets/books/book6-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -519,7 +474,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images">
-                            <img src="./Assets/books/book7-p.jpg" alt="books-f" class="imgf">
+                            <img src="./Assets/books/book7-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -537,7 +492,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images">
-                            <img src="./Assets/books/c2.jpg" alt="books-f" class="imgf">
+                            <img src="./Assets/books/c2.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -555,7 +510,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images">
-                            <img src="./Assets/books/c3.jpg" alt="books-f" class="imgf">
+                            <img src="./Assets/books/c3.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3> new arrivals</h3>
@@ -573,7 +528,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images">
-                            <img src="./Assets/books/book10-p.jpg" alt="books-f" class="imgf">
+                            <img src="./Assets/books/book10-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
