--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
         </form>
     </div>
         <!-- Detail -->
-    <div class="det-form-container">
+    <div class="det-container">
         <div id="close-det" class="fas fa-times"></div>
         <div class="box">
             <div class="images">
                 <img src="./Assets/books/Adv1.jpg" alt="books-f" class="imgf">
             </div>
             <div class="content">
-                <h3>detail book</h3>
+                <h3>Detail book</h3>
                 <p>author: <samp>name autor</samp></p>
                 <p>year: <samp>year edition</samp></p>
-                <h3>preface</h3>
+                <h3>Preface</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                     Laudantium modi nesciunt culpa illum perspiciatis, ex ad sequi ratione totam itaque.</p>
                 <div class="price">$15.99 <span>$20.99</span></div>
@@ -194,7 +194,7 @@
 
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search det"></a>
+                            <a href="#" onclick="det()" class="fas fa-search"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -210,7 +210,7 @@
                     </div>
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search det"></a>
+                            <a onclick="det()" class="fas fa-search"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -226,7 +226,7 @@
                     </div>
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search det"></a>
+                            <a href="#" onclick="det()" class="fas fa-search"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -242,7 +242,7 @@
                     </div>
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search det"></a>
+                            <a href="#" onclick="det()" class="fas fa-search"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -258,7 +258,7 @@
                     </div>
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search det"></a>
+                            <a href="#" onclick="det()" class="fas  fa-search"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -275,7 +275,7 @@
 
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search det"></a>
+                            <a href="#" onclick="det()" class="fas fa-search"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -291,7 +291,7 @@
                     </div>
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search det"></a>
+                            <a href="#" onclick="det()" class="fas fa-search"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -307,7 +307,7 @@
                     </div>
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search det"></a>
+                            <a href="#" onclick="det()" class="fas fa-search"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -323,7 +323,7 @@
                     </div>
                     <div class="swiper-slide box">
                         <div class="icons">
-                            <a href="#" class="fas fa-search"></a>
+                            <a href="#" onclick="det()" class="fas fa-search"></a>
                             <a href="#" class="fas fa-heart"></a>
                             <a href="#" class="fas fa-eye"></a>
 
@@ -360,7 +360,7 @@
 
                     <div class="swiper-slide box">
 
-                        <div class="images">
+                        <div class="images" onclick="det()">
                             <img src="./Assets/books/book1-p.jpg" alt="books-f" class="imgf ">
                         </div>
                         <div class="content">
@@ -378,7 +378,7 @@
                     </div>
                     <div class="swiper-slide box">
 
-                        <div class="images">
+                        <div class="images" onclick="det()">
                             <img src="./Assets/books/c1.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
@@ -396,7 +396,7 @@
                     </div>
                     <div class="swiper-slide box">
 
-                        <div class="images">
+                        <div class="images" onclick="det()">
                             <img src="./Assets/books/book3-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
@@ -414,7 +414,7 @@
                     </div>
                     <div class="swiper-slide box">
 
-                        <div class="images">
+                        <div class="images" onclick="det()">
                             <img src="./Assets/books/book4-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
@@ -430,7 +430,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide box">
+                    <div class="swiper-slide box" onclick="det()">
 
                         <div class="images">
                             <img src="./Assets/books/book5-p.jpg" alt="books-f" class="imgf det">
@@ -455,7 +455,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide box">
 
-                        <div class="images">
+                        <div class="images" onclick="det()">
                             <img src="./Assets/books/book6-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
@@ -473,7 +473,7 @@
                     </div>
                     <div class="swiper-slide box">
 
-                        <div class="images">
+                        <div class="images" onclick="det()">
                             <img src="./Assets/books/book7-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
@@ -491,7 +491,7 @@
                     </div>
                     <div class="swiper-slide box">
 
-                        <div class="images">
+                        <div class="images" onclick="det()">
                             <img src="./Assets/books/c2.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
@@ -509,7 +509,7 @@
                     </div>
                     <div class="swiper-slide box">
 
-                        <div class="images">
+                        <div class="images" onclick="det()">
                             <img src="./Assets/books/c3.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
@@ -527,7 +527,7 @@
                     </div>
                     <div class="swiper-slide box">
 
-                        <div class="images">
+                        <div class="images" onclick="det()">
                             <img src="./Assets/books/book10-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
