--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página creada con HTML, CSS, JS para venta de libros.
+    Esta web es 100% responsiva, el login, register y detail fueron maquetados en HTML, tienen estilo en CSS y su comportamiento lógico al tocar lo botones están echos en JS(vainilla).
+    Para las animaciones de slider, se utilizo en framework Swapper ">
+    <meta name="autor" content="FSTAILSOLUTIONS">
+    <meta name="title" content="Book Comerce">
+    <meta name="keywords" content="books-store book e-comerce">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
