--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="header-2">
             <nav class="nav-2">
                 <a href="#home">Home</a>
-                <a href="#eacture">Feacture</a>
+                <a href="#featured">Feacture</a>
                 <a href="#arrivals">Arrivals</a>
                 <a href="#reviews">Reviews</a>
                 <a href="#blogs">Blogs</a>
@@ -120,7 +120,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                     Laudantium modi nesciunt culpa illum perspiciatis, ex ad sequi ratione totam itaque.</p>
                 <div class="price">$15.99 <span>$20.99</span></div>
-                <a href="#" class="btn"> add to cart</a>
+                <a href="#" onclick="closeDet()" class="btn"> add to cart</a>
             </div>
         </div>
     </div>
@@ -139,18 +139,18 @@
                 </div>
                 <div class="swiper bookSlide">
                     <div class="swiper-wrapper">
-                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv3.jpg" alt="booksS"
-                                class="img det"></a>
-                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv2.jpg" alt="booksS"
-                                class="img det"></a>
-                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv4.jpg" alt="booksS"
-                                class="img det"></a>
-                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv5.jpg" alt="booksS"
-                                class="img det"></a>
-                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv7.jpg" alt="booksS"
-                                class="img det"></a>
-                        <a href="#" class="swiper-slide"><img src="./Assets/books/Adv1.jpg" alt="booksS"
-                                class="img det"></a>
+                        <a href="#"  onclick="det()"class="swiper-slide"><img src="./Assets/books/Adv3.jpg" alt="booksS"
+                                class="img" ></a>
+                        <a href="#" onclick="det()" class="swiper-slide"><img src="./Assets/books/Adv2.jpg" alt="booksS"
+                                class="img"></a>
+                        <a href="#" onclick="det()" class="swiper-slide"><img src="./Assets/books/Adv4.jpg" alt="booksS"
+                                class="img"></a>
+                        <a href="#" onclick="det()" class="swiper-slide"><img src="./Assets/books/Adv5.jpg" alt="booksS"
+                                class="img"></a>
+                        <a href="#" onclick="det()" class="swiper-slide"><img src="./Assets/books/Adv7.jpg" alt="booksS"
+                                class="img"></a>
+                        <a href="#"  onclick="det()"class="swiper-slide"><img src="./Assets/books/Adv1.jpg" alt="booksS"
+                                class="img" ></a>
                     </div>
 
                 </div>
