--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="login-form-container">
         <div id="close-login" class="fas fa-times"></div>
         <form action="">
-            <h3>Sing In</h3>
+            <h3>Sign In</h3>
             <span>username</span>
             <input type="email" class="box" name="username" id="user" placeholder="Enter your email">
             <span>password</span>
