update 8, correction colors, delete register, login , butons favorite and card

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             </form>
             <div class="navicon">
                 <div id="search-btn" class="fas fa-search"></div>
-                <a href="#" class="fas fa-heart"></a>
+                <!-- <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-shopping-cart"></a>
-                <div class="fa-solid fa-user login"></div>
+                <div class="fa-solid fa-user login"></div> -->
             </div>
         </nav>
 
@@ -61,7 +61,7 @@
     </nav>
 
     <!-- Login Form -->
-    <div class="login-form-container">
+    <!-- <div class="login-form-container">
         <div id="close-login" class="fas fa-times"></div>
         <form action="">
             <h3>Sign In</h3>
@@ -78,9 +78,9 @@
             <p>forget password ? <a href="#">click here</a></p>
             <p>don't have a account ? <a href="#" class="reg">create one</a></p>
         </form>
-    </div>
+    </div> -->
     <!-- Register Form -->
-    <div class="reg-form-container">
+    <!-- <div class="reg-form-container">
         <div id="close-reg" class="fas fa-times"></div>
         <form action="">
             <h3>Sing Up</h3>
@@ -104,7 +104,7 @@
             <input type="submit" value="sing up" class="btn">
 
         </form>
-    </div>
+    </div> -->
         <!-- Detail -->
     <div class="det-container">
         <div id="close-det" class="fas fa-times"></div>
