update 9, correction colors, delete register, login , butons favorite and card

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./style/style.css">
-    <link rel="shortcut icon" href="./Assets/book-solid.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/book-solid.svg" type="image/x-icon">
     <title>Book-Store</title>
 </head>
 
@@ -110,7 +110,7 @@
         <div id="close-det" class="fas fa-times"></div>
         <div class="box">
             <div class="images">
-                <img src="./Assets/books/Adv1.jpg" alt="books-f" class="imgf">
+                <img src="./assets/books/Adv1.jpg" alt="books-f" class="imgf">
             </div>
             <div class="content">
                 <h3>Detail book</h3>
@@ -139,17 +139,17 @@
                 </div>
                 <div class="swiper bookSlide">
                     <div class="swiper-wrapper">
-                        <a href="#"  onclick="det()"class="swiper-slide"><img src="./Assets/books/Adv3.jpg" alt="booksS"
+                        <a href="#"  onclick="det()"class="swiper-slide"><img src="./assets/books/Adv3.jpg" alt="booksS"
                                 class="img" ></a>
-                        <a href="#" onclick="det()" class="swiper-slide"><img src="./Assets/books/Adv2.jpg" alt="booksS"
+                        <a href="#" onclick="det()" class="swiper-slide"><img src="./assets/books/Adv2.jpg" alt="booksS"
                                 class="img"></a>
-                        <a href="#" onclick="det()" class="swiper-slide"><img src="./Assets/books/Adv4.jpg" alt="booksS"
+                        <a href="#" onclick="det()" class="swiper-slide"><img src="./assets/books/Adv4.jpg" alt="booksS"
                                 class="img"></a>
-                        <a href="#" onclick="det()" class="swiper-slide"><img src="./Assets/books/Adv5.jpg" alt="booksS"
+                        <a href="#" onclick="det()" class="swiper-slide"><img src="./assets/books/Adv5.jpg" alt="booksS"
                                 class="img"></a>
-                        <a href="#" onclick="det()" class="swiper-slide"><img src="./Assets/books/Adv7.jpg" alt="booksS"
+                        <a href="#" onclick="det()" class="swiper-slide"><img src="./assets/books/Adv7.jpg" alt="booksS"
                                 class="img"></a>
-                        <a href="#"  onclick="det()"class="swiper-slide"><img src="./Assets/books/Adv1.jpg" alt="booksS"
+                        <a href="#"  onclick="det()"class="swiper-slide"><img src="./assets/books/Adv1.jpg" alt="booksS"
                                 class="img" ></a>
                     </div>
 
@@ -206,7 +206,7 @@
 
                         </div>
                         <div class="images">
-                            <img src="./Assets/books/Adv1.jpg" alt="books-f" class="imgf">
+                            <img src="./assets/books/Adv1.jpg" alt="books-f" class="imgf">
                         </div>
                         <div class="content">
                             <h3>featured books</h3>
@@ -222,7 +222,7 @@
 
                         </div>
                         <div class="images">
-                            <img src="./Assets/books/Adv2.jpg" alt="books-f" class="imgf">
+                            <img src="./assets/books/Adv2.jpg" alt="books-f" class="imgf">
                         </div>
                         <div class="content">
                             <h3>featured books</h3>
@@ -238,7 +238,7 @@
 
                         </div>
                         <div class="images">
-                            <img src="./Assets/books/Adv3.jpg" alt="books-f" class="imgf">
+                            <img src="./assets/books/Adv3.jpg" alt="books-f" class="imgf">
                         </div>
                         <div class="content">
                             <h3>featured books</h3>
@@ -254,7 +254,7 @@
 
                         </div>
                         <div class="images">
-                            <img src="./Assets/books/Adv4.jpg" alt="books-f" class="imgf">
+                            <img src="./assets/books/Adv4.jpg" alt="books-f" class="imgf">
                         </div>
                         <div class="content">
                             <h3>featured books</h3>
@@ -270,7 +270,7 @@
 
                         </div>
                         <div class="images">
-                            <img src="./Assets/books/Adv5.jpg" alt="books-f" class="imgf">
+                            <img src="./assets/books/Adv5.jpg" alt="books-f" class="imgf">
                         </div>
                         <div class="content">
                             <h3>featured books</h3>
@@ -287,7 +287,7 @@
 
                         </div>
                         <div class="images">
-                            <img src="./Assets/books/Adv7.jpg" alt="books-f" class="imgf">
+                            <img src="./assets/books/Adv7.jpg" alt="books-f" class="imgf">
                         </div>
                         <div class="content">
                             <h3>featured books</h3>
@@ -303,7 +303,7 @@
 
                         </div>
                         <div class="images">
-                            <img src="./Assets/books/Adv8.jpg" alt="books-f" class="imgf">
+                            <img src="./assets/books/Adv8.jpg" alt="books-f" class="imgf">
                         </div>
                         <div class="content">
                             <h3>featured books</h3>
@@ -319,7 +319,7 @@
 
                         </div>
                         <div class="images">
-                            <img src="./Assets/books/book1-p.jpg" alt="books-f" class="imgf">
+                            <img src="./assets/books/book1-p.jpg" alt="books-f" class="imgf">
                         </div>
                         <div class="content">
                             <h3>featured books</h3>
@@ -335,7 +335,7 @@
 
                         </div>
                         <div class="images">
-                            <img src="./Assets/books/book3-p.jpg" alt="books-f" class="imgf">
+                            <img src="./assets/books/book3-p.jpg" alt="books-f" class="imgf">
                         </div>
                         <div class="content">
                             <h3>featured books</h3>
@@ -367,7 +367,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images" onclick="det()">
-                            <img src="./Assets/books/book1-p.jpg" alt="books-f" class="imgf ">
+                            <img src="./assets/books/book1-p.jpg" alt="books-f" class="imgf ">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -385,7 +385,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images" onclick="det()">
-                            <img src="./Assets/books/c1.jpg" alt="books-f" class="imgf det">
+                            <img src="./assets/books/c1.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -403,7 +403,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images" onclick="det()">
-                            <img src="./Assets/books/book3-p.jpg" alt="books-f" class="imgf det">
+                            <img src="./assets/books/book3-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -421,7 +421,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images" onclick="det()">
-                            <img src="./Assets/books/book4-p.jpg" alt="books-f" class="imgf det">
+                            <img src="./assets/books/book4-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -439,7 +439,7 @@
                     <div class="swiper-slide box" onclick="det()">
 
                         <div class="images">
-                            <img src="./Assets/books/book5-p.jpg" alt="books-f" class="imgf det">
+                            <img src="./assets/books/book5-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -462,7 +462,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images" onclick="det()">
-                            <img src="./Assets/books/book6-p.jpg" alt="books-f" class="imgf det">
+                            <img src="./assets/books/book6-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -480,7 +480,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images" onclick="det()">
-                            <img src="./Assets/books/book7-p.jpg" alt="books-f" class="imgf det">
+                            <img src="./assets/books/book7-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -498,7 +498,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images" onclick="det()">
-                            <img src="./Assets/books/c2.jpg" alt="books-f" class="imgf det">
+                            <img src="./assets/books/c2.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -516,7 +516,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images" onclick="det()">
-                            <img src="./Assets/books/c3.jpg" alt="books-f" class="imgf det">
+                            <img src="./assets/books/c3.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3> new arrivals</h3>
@@ -534,7 +534,7 @@
                     <div class="swiper-slide box">
 
                         <div class="images" onclick="det()">
-                            <img src="./Assets/books/book10-p.jpg" alt="books-f" class="imgf det">
+                            <img src="./assets/books/book10-p.jpg" alt="books-f" class="imgf det">
                         </div>
                         <div class="content">
                             <h3>new arrivals</h3>
@@ -564,7 +564,7 @@
                 <a href="#" class="btn">shop now</a>
             </div>
             <div class="image">
-                <img src="./Assets/books/deal-book.jpg" alt="">
+                <img src="./assets/books/deal-book.jpg" alt="">
             </div>
         </section>
 
@@ -578,7 +578,7 @@
                 <div class="swiper-wrapper">
                     <div href="#" class="swiper-slide box">
 
-                        <img src="./Assets/user-pic/pic-1.jpg" alt="users" class="imgR">
+                        <img src="./assets/user-pic/pic-1.jpg" alt="users" class="imgR">
 
                         <h3>jhon/jean doe</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -596,7 +596,7 @@
                     </div>
                     <div href="#" class="swiper-slide box">
 
-                        <img src="./Assets/user-pic/pic-7.jpg" alt="users" class="imgR">
+                        <img src="./assets/user-pic/pic-7.jpg" alt="users" class="imgR">
 
                         <h3>jhon/jean doe</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -614,7 +614,7 @@
                     </div>
                     <div href="#" class="swiper-slide box">
 
-                        <img src="./Assets/user-pic/pic-8.jpg" alt="users" class="imgR">
+                        <img src="./assets/user-pic/pic-8.jpg" alt="users" class="imgR">
 
                         <h3>jhon/jean doe</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -632,7 +632,7 @@
                     </div>
                     <div href="#" class="swiper-slide box">
 
-                        <img src="./Assets/user-pic/pic-2.jpg" alt="users" class="imgR">
+                        <img src="./assets/user-pic/pic-2.jpg" alt="users" class="imgR">
 
                         <h3>jhon/jean doe</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -650,7 +650,7 @@
                     </div>
                     <div href="#" class="swiper-slide box">
 
-                        <img src="./Assets/user-pic/pic-3.jpg" alt="users" class="imgR">
+                        <img src="./assets/user-pic/pic-3.jpg" alt="users" class="imgR">
 
                         <h3>jhon/jean doe</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -668,7 +668,7 @@
                     </div>
                     <div href="#" class="swiper-slide box">
 
-                        <img src="./Assets/user-pic/pic-4.jpg" alt="users" class="imgR">
+                        <img src="./assets/user-pic/pic-4.jpg" alt="users" class="imgR">
 
                         <h3>jhon/jean doe</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -686,7 +686,7 @@
                     </div>
                     <div href="#" class="swiper-slide box">
 
-                        <img src="./Assets/user-pic/pic-5.jpg" alt="users" class="imgR">
+                        <img src="./assets/user-pic/pic-5.jpg" alt="users" class="imgR">
 
                         <h3>jhon/jean doe</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -704,7 +704,7 @@
                     </div>
                     <div href="#" class="swiper-slide box">
 
-                        <img src="./Assets/user-pic/pic-6.jpg" alt="users" class="imgR">
+                        <img src="./assets/user-pic/pic-6.jpg" alt="users" class="imgR">
 
                         <h3>jhon/jean doe</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -734,7 +734,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide box">
                 <div class="images">
-                    <img src="./Assets/blog/blog-1.jpg" alt="books-b" class="imgB">
+                    <img src="./assets/blog/blog-1.jpg" alt="books-b" class="imgB">
                 </div>
                 <div class="content">
                     <h3>Blog title goes here</h3>
@@ -747,7 +747,7 @@
             </div>
             <div class="swiper-slide box">
                 <div class="images">
-                    <img src="./Assets/blog/blog-7.jpg" alt="books-b" class="imgB">
+                    <img src="./assets/blog/blog-7.jpg" alt="books-b" class="imgB">
                 </div>
                 <div class="content">
                     <h3>Blog title goes here</h3>
@@ -760,7 +760,7 @@
             </div>
             <div class="swiper-slide box">
                 <div class="images">
-                    <img src="./Assets/blog/blog-2.jpg" alt="books-b" class="imgB">
+                    <img src="./assets/blog/blog-2.jpg" alt="books-b" class="imgB">
                 </div>
                 <div class="content">
                     <h3>Blog title goes here</h3>
@@ -773,7 +773,7 @@
             </div>
             <div class="swiper-slide box">
                 <div class="images">
-                    <img src="./Assets/blog/blog-3.jpg" alt="books-b" class="imgB">
+                    <img src="./assets/blog/blog-3.jpg" alt="books-b" class="imgB">
                 </div>
                 <div class="content">
                     <h3>Blog title goes here</h3>
@@ -786,7 +786,7 @@
             </div>
             <div class="swiper-slide box">
                 <div class="images">
-                    <img src="./Assets/blog/blog-4.jpg" alt="books-b" class="imgB">
+                    <img src="./assets/blog/blog-4.jpg" alt="books-b" class="imgB">
                 </div>
                 <div class="content">
                     <h3>Blog title goes here</h3>
@@ -799,7 +799,7 @@
             </div>
             <div class="swiper-slide box">
                 <div class="images">
-                    <img src="./Assets/blog/blog-5.jpg" alt="books-b" class="imgB">
+                    <img src="./assets/blog/blog-5.jpg" alt="books-b" class="imgB">
                 </div>
                 <div class="content">
                     <h3>Blog title goes here</h3>
@@ -812,7 +812,7 @@
             </div>
             <div class="swiper-slide box">
                 <div class="images">
-                    <img src="./Assets/blog/blog-6.jpg" alt="books-b" class="imgB">
+                    <img src="./assets/blog/blog-6.jpg" alt="books-b" class="imgB">
                 </div>
                 <div class="content">
                     <h3>Blog title goes here</h3>
@@ -864,7 +864,7 @@
                 <a href="#home"><i class="fas fa-phone"></i> +897-564-5248618</a>
                 <a href="#home"><i class="fas fa-phone"></i> +897-561-5489979</a>
                 <a href="#home"><i class="fas fa-envelope"></i> userEmail@email.com</a>
-                <img src="./Assets/map-world.jpg" alt="map" class="map">
+                <img src="./assets/map-world.jpg" alt="map" class="map">
             </div>
         </div>
         <div class="share">
@@ -880,7 +880,7 @@
 
  <!-- Loader -->
 <div class="loader-container">
-    <img src="Assets/loader.gif" alt="loader">
+    <img src="assets/loader.gif" alt="loader">
 
 </div>
 
