--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                         </div>
                     </div>
 
-                    <div class="swiper-slide box">
+                    <!-- <div class="swiper-slide box">
                         <div class="icons">
                             <a href="#" onclick="det()" class="fas fa-search"></a>
                             <a href="#" class="fas fa-heart"></a>
@@ -310,7 +310,7 @@
                             <div class="price">$15.99 <span>$20.99</span></div>
                             <a href="#" class="btn cart"> add to cart</a>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="swiper-slide box">
                         <div class="icons">
                             <a href="#" onclick="det()" class="fas fa-search"></a>
